Update PS1 on linux to match that of mac. Also adds .git-competion to the repo.

--- a/README
+++ b/README
@@ -3,3 +3,5 @@ matcher must be installed for the ctrlP plugin for vim to work properly:
   * clone
   * make
   * make install
+
+The mac and linux PS1 settings require the existance of ~/.git-completion.sh (included in /generic)
