Usability updates for first day back.

--- a/README
+++ b/README
@@ -3,5 +3,9 @@ matcher must be installed for the ctrlP plugin for vim to work properly:
   * clone
   * make
   * make install
+  * Make sure to copy the matcher file from the build directory into ~/bin/
 
 The mac and linux PS1 settings require the existance of ~/.git-completion.sh (included in /generic)
+
+On Mac:
+  - If using iterm2 make sure to change preferences > profiles > Terminal > Report Terminal Type to "xterm-256color"
