--- a/install
+++ b/install
@@ -1,10 +1,10 @@
 echo "Installing..."
-cp -r .vim ~/.vim
-cp .vimrc ~/.vimrc
-cp .bash_profile ~/.bash_profile
-cp .gitignore ~/.gitignore
-cp .gitconfig ~/.gitconfig
-cp .git-completion.sh ~/.git-completion.sh
+ln -s .vim ~/.vim
+ln .vimrc ~/.vimrc
+ln .bash_profile ~/.bash_profile
+ln .gitignore ~/.gitignore
+ln .gitconfig ~/.gitconfig
+ln .git-completion.sh ~/.git-completion.sh
 
 git config --global core.excludesfile ~/.gitignore
 echo "Complete."
