--- a/install
+++ b/install
@@ -1,10 +1,10 @@
 echo "Installing..."
 ln -s .vim ~/.vim
-ln .vimrc ~/.vimrc
-ln .bash_profile ~/.bash_profile
-ln .gitignore ~/.gitignore
-ln .gitconfig ~/.gitconfig
-ln .git-completion.sh ~/.git-completion.sh
+ln -s .vimrc ~/.vimrc
+ln -s .bash_profile ~/.bash_profile
+ln -s .gitignore ~/.gitignore
+ln -s .gitconfig ~/.gitconfig
+ln -s .git-completion.sh ~/.git-completion.sh
 
 git config --global core.excludesfile ~/.gitignore
 echo "Complete."
